--- a/toDoList/style.css
+++ b/toDoList/style.css
@@ -1,20 +1,84 @@
+body {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+#wholeContent {
+    text-align: center;
+}
+
+h1 {
+    font-size: 4em;
+    color: #009688;
+    text-align: center;
+}
+
+input[type=text] {
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 2px solid #4CAF50;
+    outline: none;
+    font-size: 30px;
+    font-family: inherit;
+    color: blueviolet;
+}
+
+#addBtn {
+    background-color: white;
+    color: #4CAF50;
+    border: none;
+    padding: 12px 20px;
+    margin: 8px 0;
+    font-weight: Bold;
+    outline: none;
+    border-radius: 2px;
+    font-size: 30px;
+    font-family: inherit;
+}
+
+#addBtn:hover {
+    background-color: #4CAF50;
+    color: white;
+    transition: all 0.5s;
+    font-size: 200%;
+}
+
 ul li {
     color: darkgreen;
     font-weight: bold;
-    font-size: 150%
+    font-size: 25px;
+    background: ;
+    text-align: center;
 }
 
 ul li:hover {
     color: rgb(3, 43, 3);
+    font-size: 200%;
+    transition: all 0.5s;
 }
 
 .removeBtn {
     margin-left: 5px;
+    background-color: inherit;
+    color: inherit;
+    border: none;
+    font-size: 100%;
+    border-radius: 5px;
+    padding: 12px 16px;
+}
+
+.removeBtn:hover {
+    background-color: #f44336;
+    color: white;
+    transition: all 0.5s;
 }
 
 .remove {
     margin: 5px 0;
     width: fit-content;
+    padding: 0px;
 }
 
 .crossOut {
