--- a/toDoList/style.css
+++ b/toDoList/style.css
@@ -62,9 +62,9 @@ ul li:hover {
 .removeBtn {
     margin-left: 5px;
     background-color: inherit;
-    color: inherit;
+    color: #f44336;
     border: none;
-    font-size: 100%;
+    font-size: 25px;
     border-radius: 5px;
     padding: 12px 16px;
 }
